Fixed column align on product intro section; started product info sec.

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
     text-decoration: none;
     padding: 5px 15px;
     font-family: 'Raleway', sans-serif;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -98,7 +98,7 @@ header {
 
 #product-intro
 { 
-    height: 50vh;
+    height: 45vh;
     width: 100%;
 
 }
@@ -106,29 +106,53 @@ header {
 .intro-title h1
 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: lighter;
     text-align: center;
     position: relative;
     margin-top: 50px;
-    margin-right: 200px;
+    margin-left: 450px;
 }
   
-#product-intro .row
+.column-container div
 {
-    display: inline-block;
-    margin: 0 5px 5px 150px;
-    padding: 10px
+    column-count: 2;
+    display: inline-flex;
+    margin: -15px auto;
+    padding: 15px;
+    top: 10%;
+    left: 80%;
+    transform: translate(90%,20%);
+    -webkit-transform: translate(90%,20%);
+    -moz-transform: translate(90%,20%);
+    -ms-transform: translate(90%,20%);
+    -o-transform: translate(90%,20%);
 }
 
-#product-intro .column 
+.column-container .column p 
 {
     font-family: 'Raleway', sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     text-align: left;
-    display: inline-block;
-    margin-top: 20px;
-    padding: 25px 40px;
+    margin-top: 5px;
+}
+
+/* Product Info Section */
+
+#product-info
+{
+    height: 100vh;
+    width: 100%;
+}
+
+.container-product h1
+{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: lighter;
+    font-size: 35px;
+    text-decoration: underline;
+    text-underline-position: under;
+    text-align: center;
 }
 
 /* Product Selection - Gallery Section */
